@@ -2,6 +2,7 @@ xsunpinyin (2.0.3-2) unstable; urgency=low
 
   * Update debian/copyright to fit DEP-5
   * Bump Standards-Version to 3.9.2
+  * Add build-arch and build-indep in debian/rules
   
  -- Liang Guo <bluestonechina@gmail.com>  Thu, 15 Sep 2011 23:45:17 +0800
 
